
    PIG-528: use UDF return in schema computation (sms via olgan)

    PIG-527: allow PigStorage to write out complex output (sms via olgan)

    PIG-537: Failure in Hadoop map collect stage due to type mismatch in the
    keys used in cogroup (pradeepk vi olgan)

    PIG-538: support for null constants (pradeepk via olgan)

    PIG-385: more null handling (pradeepk via olgan)

    PIG-546: FilterFunc calls empty constructor when it should be calling
    parameterized constructor (sms via olgan)

    PIG-449: Schemas for bags should contain tuples all the time (pradeepk via
    olgan)

    PIG-501: make unit tests run under windows (daijy via olgan)

	PIG-543: Restore local mode to truly run locally instead of use map
	reduce. (shubhamc via gates)

	PIG-556: Changed FindQuantiles to report progress.  Fixed issue with null
	reporter being passed to EvalFuncs. (gates)

	PIG-6: Add load support from hbase (hustlmsp via gates).

    PIG-522: make negation work (pradeepk via olgan)

    PIG-563: support for multiple combiner invocations (pradeepk via olgan)

    PIG-580: using combiner to compute distinct aggs (pradeepk via olgan)

    PIG-558: Distinct followed by a Join results in Invalid size 0 for a tuple
    error (pradeepk via olgan)

	PIG-572 A PigServer.registerScript() method, which lets a client
	programmatically register a Pig Script.  (shubhamc via gates)

    PIG-570:  problems with handling bzip data (breed via olgan)

	PIG-599: Added buffering to BufferedPositionedInputStream (gates)

    PIG-597: Fix for how * is treated by UDFs (shravanmn via olgan)

    PIG-629: performance improvement: getting rid of targeted tuple (pradeepk
    via olgan)

    PIG-623: Fix spelling errors in output messages (tomwhite via sms)

    PIG-622: Include pig executable in distribution (tomwhite via sms)

    PIG-628: misc performance improvements (pradeepk via olgan)
    
    PIG-589: error handling, phase 1-2 (sms via olgan):wq